        _ getCurrentWord => alias of getWord
        _ getWord
        ✓ write => alias for addText


        ✗ clearCallbacks    => callback
        ✗ callback          => callback
        ✗ callbackSync      => callback

    KEEP THE HISTORY BELOW HERE (what I actually accomplish):
    - implemented helper methods: forEachLine, deleteLine, replaceWholeLine,
        replaceLine, flash (#15)
    - implemented new auto-wrapper to get searchInTarget and similar calls
        to work right (#42)
    - fixed replaceTarget() and replaceTargetRE() replacing target with the
        empty string (#41)
    - fixed length bug in getTargetText() (#40)
    - fixed bug in editor->setText('') which had empty strings
        cause crash (#39)

v0.003 2020-Apr-06
    - fix mistakes and missing information in the POD (#35)
    - add author tests for checking for autogen entries not in the
        message list, and also note scintilla messages missing
        from autogen that aren't manually implemented or deprecated
        (#34)
    - some NPP v7.8 messages were missing, so add them (#29)
        and add a make target to make that easier to do in the future
    - added version notes, to say which messages and enums require
        NPP v7.8 (because these are the SCI v4.2.0 updates)
    - runPluginsCommand() = fixed command cache feature and improved
        test (#30)
    - test suite: add delay in myTestHelpers to make sure there's
        enough time after Notepad++ started before trying to save the
        session (to avoid race condition with no files loaded yet)

v0.002 2020-Mar-21
    - Reorganize the hash variables for easier and clearer use going
        forward (#13)
    - editor->getLine() on an empty line will now correctly return an empty
        string, not "\0" (fixed #14)
    - update API for getNumberOpenFiles to correctly use the constants (#17)
    - add notepad->getNppVar() for accessing the "user variables", like